# mcgateway

./: .dockerignore  .gitignore  Makefile  README.md
.github/workflows/: ci.yml
doc/: high-level.md  memcache-gateway-prd.md
doc/plans/: implementation-plan.md  stage-1-lua-routing.md  stage-2-fanout-merge.md  stage-3a-rust-merges.md  stage-3b-wasm-merges.md  stage-4-operator.md  stage-6-observability.md
docker/: Dockerfile  Dockerfile.operator
go/: go.mod  go.sum
go/api/v1alpha1/: doc.go  groupversion_info.go  types.go  zz_generated.deepcopy.go
go/cmd/mcgateway-operator/: main.go
go/internal/kind/: fanout_test.go  helpers.go  kind_test.go  metrics_test.go  native_test.go  operator_test.go  reload_test.go  wasm_proto_test.go
go/internal/operator/: commit.go  commit_test.go  controller.go  controller_test.go  metrics.go  render.go  render_test.go
k8s/charts/mcgateway/: Chart.yaml  values-kind.yaml  values.yaml
k8s/charts/mcgateway/crds/: mcgateway.dev_keyspaces.yaml  mcgateway.dev_pools.yaml
k8s/charts/mcgateway/templates/: _helpers.tpl  backends.yaml  configmap.yaml  deployment.yaml  operator-rbac.yaml  resources.yaml  servicemonitor.yaml
lua/: mcgateway.lua
lua/examples/: config.lua  proxy.lua
lua/mcgateway/: config.lua  entries.lua  keyspaces.lua  merges.lua  pools.lua  routes.lua  util.lua
lua/tests/: test_config_fallback.lua  test_entries.lua  test_merges.lua  test_rendered_config.lua  test_routes.lua  test_routes_metrics.lua
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/mcgateway-clib/: Cargo.toml
rust/crates/mcgateway-clib/src/: lib.rs  logging.rs  metrics.rs  registries.rs  udf_loader.rs  watcher.rs
rust/crates/mcgateway-clib/tests/: metrics.rs  udf_loader.rs  watcher.rs
rust/crates/mcgateway-core/: Cargo.toml
rust/crates/mcgateway-core/src/: builtins.rs  lib.rs
rust/crates/mcgateway-merge-builtins/: Cargo.toml
rust/crates/mcgateway-merge-builtins/src/: lib.rs
rust/crates/mcgateway-sdk/: Cargo.toml
rust/crates/mcgateway-sdk-macros/: Cargo.toml
rust/crates/mcgateway-sdk-macros/src/: lib.rs
rust/crates/mcgateway-sdk/src/: lib.rs
rust/crates/mcgateway-wasm-host/: Cargo.toml
rust/crates/mcgateway-wasm-host/src/: lib.rs
rust/crates/mcgateway-wasm-host/tests/: fixtures.rs  proto.rs  sdk_roundtrip.rs
rust/crates/mcgateway-wasm-host/tests/fixtures/: bad_abi.wat  guest_error.wat  infinite_loop.wat  log_flood.wat  log_then_miss.wat  miss.wat  synthesized.wat  trap.wat  winner_from_entries.wat  winner_out_of_range.wat  winner_zero.wat
rust/examples/merge-concat-values/: Cargo.toml
rust/examples/merge-concat-values/src/: lib.rs
rust/examples/merge-last-n-wins/: Cargo.toml
rust/examples/merge-last-n-wins/src/: lib.rs
rust/examples/merge-profile-proto/: Cargo.toml
rust/examples/merge-profile-proto/proto/: profile.proto
rust/examples/merge-profile-proto/src/: lib.rs
(+31 files in other folders)
