[workspace]
resolver = "2"
members = [
    "crates/mcgateway-core",
    "crates/mcgateway-clib",
    "crates/mcgateway-wasm-host",
    "crates/mcgateway-sdk",
    "crates/mcgateway-sdk-macros",
    "examples/merge-last-n-wins",
    "examples/merge-concat-values",
    "examples/merge-profile-proto",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
