[package]
name = "mcgateway-clib"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "mcgateway_native"
crate-type = ["cdylib"]

[dependencies]
mcgateway-core = { path = "../mcgateway-core" }
mcgateway-wasm-host = { path = "../mcgateway-wasm-host" }
mlua = { version = "0.10", features = ["lua54", "module"] }
arc-swap = "1"

[dev-dependencies]
tempfile = "3"
wat = "1"

[lints]
workspace = true
